cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificIntUserDefFuncStatsCheckContinue.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------------------------------------
  (1/1) Internal user-defined function has a 'continue' statement.
  ----------------------------------------------------------------
   * In user-defined function "f":
     - continue;
       ^
   * In user-defined function "g.f":
     - continue;
       ^
